<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saint_petersburg"
        android:textSize="25sp"
        app:layout_constraintVertical_weight="5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="25sp"
        app:layout_constraintVertical_weight="5"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintBottom_toTopOf="@id/main_weather_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/main_weather_image"
        android:layout_width="205dp"
        android:layout_height="222dp"
        android:src="@drawable/ic_021_sunrise"
        app:layout_constraintVertical_weight="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintBottom_toTopOf="@id/main_weather_value"/>

    <TextView
        android:id="@+id/main_weather_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_42_c"
        app:layout_constraintVertical_weight="10"
        android:textSize="70sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/main_weather_image"
        app:layout_constraintBottom_toTopOf="@id/weekend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/weekend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekend"
        app:layout_constraintVertical_weight="7"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/mo"
        app:layout_constraintTop_toBottomOf="@id/main_weather_value"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/mo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/mo_image"
        app:layout_constraintLeft_toLeftOf="@id/mo_image"
        app:layout_constraintRight_toRightOf="@id/mo_image"
        />

    <ImageView
        android:id="@+id/mo_image"
        style="@style/WeekImageStyle"
        android:src="@drawable/ic_021_cloud"
        app:layout_constraintBottom_toTopOf="@id/mo_forecast"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tu_image"
        app:layout_constraintHorizontal_weight="1" />


    <TextView
        android:id="@+id/mo_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/mo_image"
        app:layout_constraintRight_toRightOf="@id/mo_image"
        />

    <TextView
        android:id="@+id/tu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/tu_image"
        app:layout_constraintLeft_toLeftOf="@id/tu_image"
        app:layout_constraintRight_toRightOf="@id/tu_image"
        />

    <ImageView
        android:id="@+id/tu_image"
        style="@style/WeekImageStyle"
        android:src="@drawable/ic_021_rain_1"
        app:layout_constraintBottom_toTopOf="@id/tu_forecast"
        app:layout_constraintLeft_toRightOf="@id/mo_image"
        app:layout_constraintRight_toLeftOf="@id/we_image"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/tu_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tu_image"
        app:layout_constraintRight_toRightOf="@id/tu_image"
        />

    <TextView
        android:id="@+id/we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/we_image"
        app:layout_constraintLeft_toLeftOf="@id/we_image"
        app:layout_constraintRight_toRightOf="@id/we_image"
        />

    <ImageView
        android:id="@+id/we_image"
        style="@style/WeekImageStyle"
        android:src="@drawable/ic_021_cloudy_1"
        app:layout_constraintBottom_toTopOf="@id/we_forecast"
        app:layout_constraintLeft_toRightOf="@id/tu_image"
        app:layout_constraintRight_toLeftOf="@id/th_image"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/we_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/we_image"
        app:layout_constraintRight_toRightOf="@id/we_image"
        />


    <TextView
        android:id="@+id/th"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/th_image"
        app:layout_constraintLeft_toLeftOf="@id/th_image"
        app:layout_constraintRight_toRightOf="@id/th_image"
        />

    <ImageView
        android:id="@+id/th_image"
        style="@style/WeekImageStyle"

        android:src="@drawable/ic_021_snowing_3"
        app:layout_constraintBottom_toTopOf="@id/th_forecast"
        app:layout_constraintLeft_toRightOf="@id/we_image"
        app:layout_constraintRight_toLeftOf="@id/fr_image"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/th_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_22"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/th_image"
        app:layout_constraintRight_toRightOf="@id/th_image"
        />


    <TextView
        android:id="@+id/fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/fr_image"
        app:layout_constraintLeft_toLeftOf="@id/fr_image"
        app:layout_constraintRight_toRightOf="@id/fr_image"
        />

    <ImageView
        android:id="@+id/fr_image"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_021_cloudy"
        app:layout_constraintBottom_toTopOf="@id/fr_forecast"
        app:layout_constraintLeft_toRightOf="@id/th_image"
        app:layout_constraintRight_toLeftOf="@id/sa_image"
        app:layout_constraintHorizontal_weight="1"
        />

    <TextView
        android:id="@+id/fr_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/fr_image"
        app:layout_constraintRight_toRightOf="@id/fr_image"
        />
    <TextView
        android:id="@+id/sa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/sa_image"
        app:layout_constraintLeft_toLeftOf="@id/sa_image"
        app:layout_constraintRight_toRightOf="@id/sa_image"
        />

    <ImageView
        android:id="@+id/sa_image"
        style="@style/WeekImageStyle"
        android:src="@drawable/ic_021_sun"
        app:layout_constraintBottom_toTopOf="@id/sa_forecast"
        app:layout_constraintLeft_toRightOf="@id/fr_image"
        app:layout_constraintRight_toLeftOf="@id/su_image"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/sa_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_17"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/sa_image"
        app:layout_constraintRight_toRightOf="@id/sa_image"
        />

    <TextView
        android:id="@+id/su"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        style="@style/WeekTextStyle"
        app:layout_constraintBottom_toTopOf="@id/su_image"
        app:layout_constraintLeft_toLeftOf="@id/su_image"
        app:layout_constraintRight_toRightOf="@id/su_image"
        />

    <ImageView
        android:id="@+id/su_image"
        style="@style/WeekImageStyle"
        android:src="@drawable/ic_021_storm"
        app:layout_constraintBottom_toTopOf="@id/su_forecast"
        app:layout_constraintLeft_toRightOf="@id/sa_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/su_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        style="@style/WeekForecastStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/su_image"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>